--- a/.github/workflows/build-omxplayer-cross.yml
+++ b/.github/workflows/build-omxplayer-cross.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Build inside ARMv6 container
         run: |
-          docker run --rm --platform linux/arm/v6 -v ${{ github.workspace }}:/workspace -w /workspace debian:bullseye bash -c "
+          docker run --rm --platform linux/arm/v6 -v ${{ github.workspace }}:/workspace -w /workspace balenalib/rpi-debian:bullseye bash -c "
             set -e
 
             apt update
