--- a/.github/workflows/build-omxplayer-cross.yml
+++ b/.github/workflows/build-omxplayer-cross.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
+      - name: Restore cached userland
+        uses: actions/cache@v3
+        with:
+          path: userland/opt
+          key: userland-opt-v1
+          
       - name: Build inside ARMv6 container
         run: |
           docker run --rm --platform linux/arm/v6 -v ${{ github.workspace }}:/workspace -w /workspace balenalib/rpi-debian:bullseye bash -c "
@@ -30,15 +36,24 @@ jobs:
 
             gem install --no-document fpm
 
-            # Сборка userland
-            git clone https://github.com/raspberrypi/userland
-            cd userland
-            ./buildme
-            cd ..
+              # Сборка userland (только если /opt/vc/lib/libWFC.so отсутствует)
+              if [ ! -f userland/opt/vc/lib/libWFC.so ]; then
+                git clone https://github.com/raspberrypi/userland
+                cd userland
+                ./buildme
+                cd ..
+              fi
 
+            # Подключение userland
+              cp -r userland/opt /opt
+            
             # Сборка omxplayer
             git clone https://github.com/popcornmix/omxplayer
             cd omxplayer
+
+            # Патч Makefile.include
+            sed -i '/ffmpeg_compiled\\/usr\\/local\\/include/d' Makefile.include
+              
             export VC_PATH=/opt/vc
             export LD_LIBRARY_PATH=\$VC_PATH/lib
             make -j2 CC=arm-linux-gnueabihf-gcc CXX=arm-linux-gnueabihf-g++
@@ -46,7 +61,8 @@ jobs:
             # Создание .deb
             mkdir -p deb/usr/bin
             cp omxplayer.bin deb/usr/bin/omxplayer
-            fpm -s dir -t deb -n omxplayer -v 0.3.7 --prefix=/ -C deb .
+            fpm -s dir -t deb -n omxplayer -v 0.3.7 --architecture armhf --prefix=/ -C deb .
+            mv *.deb /workspace/
           "
 
       - name: Upload .deb artifact
